@@ -1,21 +1,30 @@
 
 from AthenaCommon.AppMgr import ToolSvc
 
+from TrkDetDescrSvc.TrkDetDescrJobProperties import TrkDetFlags
+
+from MuonTrackingGeometry.MuonTrackingGeometryConf import Muon__MuonStationTypeBuilder
+MuonStationTypeBuilder= Muon__MuonStationTypeBuilder(name = 'MuonStationTypeBuilder')
+MuonStationTypeBuilder.MagneticFieldMode = TrkDetFlags.MagneticFieldMode()
+ToolSvc += MuonStationTypeBuilder
+
 # muon active/passive geometry setup
 from MuonTrackingGeometry.MuonTrackingGeometryConf import Muon__MuonStationBuilder
 MuonStationBuilder= Muon__MuonStationBuilder(name = 'MuonStationBuilder')
+MuonStationBuilder.StationTypeBuilder = MuonStationTypeBuilder
+MuonStationBuilder.MagneticFieldMode  = TrkDetFlags.MagneticFieldMode()
 ToolSvc += MuonStationBuilder
 
 from MuonTrackingGeometry.MuonTrackingGeometryConf import Muon__MuonInertMaterialBuilder
 MuonInertMaterialBuilder= Muon__MuonInertMaterialBuilder(name = 'MuonInertMaterialBuilder')
 ToolSvc += MuonInertMaterialBuilder 
 
-from TrkDetDescrSvc.TrkDetDescrJobProperties import TrkDetFlags
 # muon tracking geometry builder
 from MuonTrackingGeometry.MuonTrackingGeometryConf import Muon__MuonTrackingGeometryBuilder
 MuonTrackingGeometryBuilder= Muon__MuonTrackingGeometryBuilder(name = 'MuonTrackingGeometryBuilder')
-MuonTrackingGeometryBuilder.EntryVolumeName = TrkDetFlags.MuonSystemEntryVolumeName.get_Value()
-MuonTrackingGeometryBuilder.ExitVolumeName  = TrkDetFlags.MuonSystemContainerName.get_Value()
+MuonTrackingGeometryBuilder.EntryVolumeName = TrkDetFlags.MuonSystemEntryVolumeName()
+MuonTrackingGeometryBuilder.ExitVolumeName  = TrkDetFlags.MuonSystemContainerName()
+MuonTrackingGeometryBuilder.MagneticFieldMode = TrkDetFlags.MagneticFieldMode()
 ToolSvc += MuonTrackingGeometryBuilder
 
 print MuonTrackingGeometryBuilder
