@@ -1,3 +1,8 @@
+2009-04-03 Andreas Salzburger <Andreas.Salzburger -at- cern.ch>
+        * noField option introduced
+        * memory defragmentation fixes (no dynamic allocation)
+        * MuonTrackingGeometry-00-05-00
+
 2009-04-02 Sarka Todorova <sarka.todorova@cern.ch>
 	* CSC stations fixed (for GEO) 
 	* tagged as MuonTrackingGeometry-00-04-26
